[gd_scene load_steps=12 format=2]

[ext_resource path="res://scn/prototype_files/MapAIPrototype.tscn" type="PackedScene" id=1]
[ext_resource path="res://scn/prototype_files/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scn/prototype_files/Spawnfly.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Prototype files/Test_World.gd" type="Script" id=4]
[ext_resource path="res://assets/misc/void_bg.png" type="Texture" id=5]
[ext_resource path="res://scn/GUIs/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/misc/PartyConfettiRegular-eZOn3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/prototype files/score.gd" type="Script" id=8]
[ext_resource path="res://scn/GUIs/EndScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/SFXs/BGM/music_zapsplat_aiming_high.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 7 )

[node name="Test_World" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="bg" type="TextureRect" parent="bg"]
self_modulate = Color( 0.352941, 1, 0.717647, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 5 )
expand = true

[node name="t_creater" parent="." instance=ExtResource( 1 )]

[node name="Positioner" type="Node2D" parent="."]
position = Vector2( 503, -889 )

[node name="Spawnfly" parent="." instance=ExtResource( 3 )]
position = Vector2( -669, -994 )

[node name="StaySpawnPos" type="Node2D" parent="."]
position = Vector2( 503, -889 )

[node name="SpawnPosition" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -640, -448 )

[node name="Position2D2" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -512, -576 )

[node name="Position2D3" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -384, -576 )

[node name="Position2D4" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -256, -576 )

[node name="Position2D5" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -128, -576 )

[node name="Position2D6" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 0, -576 )

[node name="Position2D7" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 128, -576 )

[node name="Position2D8" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 256, -576 )

[node name="Position2D9" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 384, -576 )

[node name="Position2D10" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 512, -576 )

[node name="Position2D11" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 640, -448 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -400 )

[node name="Camera2D" parent="Player" index="1"]
current = false
smoothing_speed = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="spawndiffinterval" type="Timer" parent="."]
wait_time = 5.0

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseMenu" parent="GUI" instance=ExtResource( 6 )]

[node name="score" type="Label" parent="GUI"]
anchor_right = 1.0
margin_right = 320.0
margin_bottom = 81.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="EndScene" parent="GUI" instance=ExtResource( 9 )]
layer = 11

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[connection signal="create_block" from="." to="t_creater" method="_on_create_block"]
[connection signal="create_block" from="t_creater" to="." method="_on_t_creater_create_block"]
[connection signal="playerIsDead" from="Player" to="GUI/EndScene" method="_on_Player_playerIsDead"]
[connection signal="timeout" from="Timer" to="t_creater" method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="spawndiffinterval" to="." method="_on_spawndiffinterval_timeout"]

[editable path="Player"]
